--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "firebase": "^10.5.2",
+    "framer-motion": "^12.15.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
